--- a/css/style.css
+++ b/css/style.css
@@ -760,6 +760,9 @@
   border: 1px solid rgba(0, 0, 0, 0.08);
   text-align: center;
 }
+.image-container:hover .project-image {
+  filter: brightness(60%);
+}
 .image-container:hover {
   background-color: #b2d6f2;
 }
@@ -1578,15 +1581,37 @@
 .download_icon{
   position: absolute;
   top: 50px;
-  left: 70px;
+  left: 63px;
   display: none;
 
 }
 .project_zoom_icon{
   cursor: pointer;
+  background-color: white;
+  padding: 3px;
+  border-radius: 50%;
+}
+.project_zoom_icon:hover{
+  background-color: #0f7ec2;
+}
+.project_zoom_icon:hover .my-work-project-icon {
+  color: white;
 }
 .project_download_icon{
   cursor: pointer;
+  background-color:  white;
+  padding:3px 6px;
+  border-radius: 50%;
+}
+.project_download_icon:hover{
+  background-color: #0f7ec2;
+  
+}
+.project_download_icon:hover .my-work-download-icon {
+  color: white;
+}
+.my-work-project-icon{
+  margin-left: 5px;
 }
 .zoom_modal img{
   width: 100%;
@@ -1623,15 +1648,36 @@
   cursor: pointer;
 }
 @media screen and (max-width: 768px) {
+  .sidebar-content {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    overflow-y: auto;
+    width: 50%;
+    height: 100vh; /* Added height */
+  }
+
+  .left-nav-hidden .sidebar-content {
+    display: none;
+  }
+  
+  .left-nav-hidden #main-content {
+    grid-template-columns: 0% 100%; 
+  }
   .menu-link:focus {
     border-bottom: none;
   }
 
   #main-content {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 40% 60%;
     height: 100vh;
-    transition: all 0.4s ease-in-out 0.5s;
+    transition: all 0.4s ease-in-out 0.5s; */
+    grid-template-columns: 100%;
+    height: 100vh;
   }
 
   .main-content-part {
