--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 
 .main-content-part {
   overflow: auto;
+  width: 100%;
 }
 
 /* sidebar style stale */
@@ -230,7 +231,7 @@
   font-style: normal;
   font-weight: 600;
   font-size: 28px;
-  line-height: 37px;
+  
   display: flex;
   align-items: center;
   color: #000000;
@@ -278,7 +279,15 @@
   gap: 10px;
   margin: 5px 20px;
 }
-
+.leve-chart-container{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 10px;
+  margin: 5px 20px;
+}
+.leve-chart-container{
+  padding: 10px;
+}
 .chart1 {
   background: white;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
@@ -1163,6 +1172,7 @@
 
 .person-chat {
   display: none;
+ 
 }
 
 .person-chat-content {
@@ -1176,7 +1186,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow-y: scroll;
 }
+.person-chat-content::-webkit-scrollbar {
+  width: 7px;
+}
+
 
 .chat-title {
   background-color: #0f7ec2;
@@ -1296,6 +1311,7 @@
 .chat-details-person-images {
   display: flex;
   align-items: center;
+ 
 }
 
 .chat-details-person-images img {
@@ -1306,23 +1322,33 @@
 
 .chat-details-person-images p {
   margin-top: 15px;
-  margin-left: 10px;
+  margin-left: 5px;
   background-color: rgb(201, 196, 196);
   border-radius: 20px;
-  padding: 4px;
+  padding: 7px 10px;
+  text-align: justify;
 }
 
 .chat-details-time {
+  margin: 0;
+  padding-top: 10px;
   display: flex;
   justify-content: center;
+  
 }
 
 .chat-left {
-  float: left;
+  display: flex;
+  align-items: center;
+
+ 
 }
 
 .chat-right {
-  float: right;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  
 }
 
 .chat-right-imgage {
@@ -1645,7 +1671,21 @@
   color: #0f7ec2;
   cursor: pointer;
 }
+
 @media screen and (max-width: 768px) {
+  .nav-profile-img{
+
+    display: none;
+
+  }
+  .notification-content{
+    display: none;
+  }
+  .nav-notification{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .sidebar-content {
     display: none;
     position: fixed;
@@ -1698,9 +1738,16 @@
     gap: 10px;
     margin: 5px 20px;
   }
+  .leve-chart-container{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+    margin: 5px 20px;
+  }
 
   .notification-item {
     width: 100%;
+   
   }
 
   #chat_content {
@@ -1717,6 +1764,7 @@
     right: 10px;
     width: 60%;
     height: 100%;
+    overflow-y: scroll;
   }
 }
 
