--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,12 @@
 .solid-divider {
   margin: 5px 0;
   border-bottom: 3px solid rgb(115, 111, 111);
+ 
 }
-
+.side-menu-btn2{
+  font-size: 25px;
+  margin: 0;
+}
 .side_nav a {
   font-family: "Inter";
   font-style: normal;
@@ -1345,7 +1349,7 @@
   justify-content: center;
   
 }
-
+/* 
 .chat-left {
   display: flex;
   align-items: center;
@@ -1365,7 +1369,22 @@
   align-items: center;
   justify-content: center;
 }
+ */
+ .chat-left {
+  float: left;
+  width: 100% !important;
+}
 
+.chat-right {
+  float: right;
+  width: 100% !important;
+}
+
+.chat-right-imgage {
+  display: flex;
+  align-items: center;
+  justify-content: right !important;
+}
 
 .chat-right-imgage p {
   background-color: rgb(94, 11, 220);
@@ -1685,10 +1704,18 @@
 }
 
 @media screen and (max-width: 768px) {
+  .nav-sm-background{
+    background-color: #162141;
+   
+  }
+ 
   .nav-profile-img{
-
     display: none;
-
+    
+  }
+  .dropdown-menu-custom {
+    width: 300px;
+    
   }
   .notification-content{
     display: none;
@@ -1721,6 +1748,9 @@
     border-bottom: none;
   }
 
+.menu-link{
+  color: wheat !important;
+}
   #main-content {
     /* display: grid;
     grid-template-columns: 40% 60%;
