--- a/leave/style.css
+++ b/leave/style.css
@@ -48,4 +48,10 @@
     justify-content: space-around;
     align-items: center;
 }
-.leave-info-content button{}
+.leave-info-content button{
+    background-color: #0f7ec2;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 15px 7px;
+}
