--- a/Schedule/style.css
+++ b/Schedule/style.css
@@ -188,8 +188,8 @@
   height: 70px;
   padding: 0 10px;
 }
-.schedule-from-textarea:focus{
- outline: none;
+.schedule-from-textarea:focus {
+  outline: none;
 }
 .schedule-from-input-file {
   border: 2px solid rgb(207, 204, 204);
@@ -220,7 +220,7 @@
   outline: none;
 }
 
-.sch-approve-overlay-info{
+.sch-approve-overlay-info {
   position: absolute;
   top: 0;
   left: 0;
@@ -243,8 +243,53 @@
   overflow-y: scroll;
   border: 1px solid rgb(162, 158, 158);
 }
+.shudele-table-title {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+}
 
+#sch-employee-table {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  
+}
+
+#sch-employee-table td,
+#sch-employee-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+#sch-employee-table tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+/* #customers tr:hover {background-color: #ddd;} */
+.table-style{
+  overflow-x: auto;
+}
+#sch-employee-table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #f2f2f2;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+}
 @media screen and (max-width: 768px) {
+  #sch-employee-table td,
+  #sch-employee-table th {
+    white-space: nowrap;
+  }
   .input-schedule-data {
     width: 300px;
   }
