--- a/Schedule/style.css
+++ b/Schedule/style.css
@@ -15,6 +15,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .input-schedule-data {
   width: 652px;
   height: 40px;
@@ -28,6 +29,9 @@
 .individual-employee-schedule {
   width: 652px;
   display: none;
+}
+.ssss {
+  width: 652px;
 }
 .schedule-employee-profile {
   background: #f1f4fa;
@@ -56,10 +60,10 @@
 
 .change-schedule-form {
   margin-top: 20px;
-  background: #f1f4fa;
   border: 2px solid rgba(0, 0, 0, 0.08);
   padding: 20px;
-  margin-bottom: 30px;
+  background: #f1f4fa;
+  margin-bottom: 20px;
 }
 
 .change-schedule-form-title {
@@ -83,6 +87,7 @@
 }
 .change-schedule-date-shift {
   border: 2px solid rgba(0, 0, 0, 0.08);
+  width: 100%;
 }
 .select-schedule-date-shift {
   display: grid;
@@ -255,7 +260,6 @@
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
-  
 }
 
 #sch-employee-table td,
@@ -273,7 +277,7 @@
 }
 
 /* #customers tr:hover {background-color: #ddd;} */
-.table-style{
+.table-style {
   overflow-x: auto;
 }
 #sch-employee-table th {
@@ -310,7 +314,22 @@
   overflow-y: scroll;
   border: 1px solid rgb(162, 158, 158);
 }
+#previous {
+  margin-top: 14px;
+  margin-right: 7px;
+  cursor: pointer;
+}
+#next {
+  margin-top: 14px;
+  cursor: pointer;
+}
 @media screen and (max-width: 768px) {
+  #next {
+    display: none;
+  }
+  #previous {
+    display: none;
+  }
   #sch-employee-table td,
   #sch-employee-table th {
     white-space: nowrap;
@@ -331,7 +350,7 @@
   .sch-approve-content-info {
     width: 100%;
   }
-  .individual-sch-content-info{
+  .individual-sch-content-info {
     width: 100%;
   }
 }
